# statalih

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  testApp.sh.in
app/: CMakeLists.txt  logging.h  settings.cpp  settings.h  statalih.cpp  statalih.h
app/controllers/: CMakeLists.txt  root.cpp  root.h
app/translations/: statalih.de.ts.license
cmd/: CMakeLists.txt  cli.cpp  cli.h  configuration.cpp  configuration.h  controller.cpp  controller.h  database.cpp  database.h  feed.cpp  feed.h  feed_p.h  feedparser.cpp  feedparser.h  itemimageextractor.cpp  itemimageextractor.h  main.cpp  utils.cpp  utils.h
cmd/commands/: CMakeLists.txt  command.cpp  command.h  databasecommand.cpp  databasecommand.h  databasemigrationcommand.cpp  databasemigrationcommand.h  databaserefreshcommand.cpp  databaserefreshcommand.h  databaseresetcommand.cpp  databaseresetcommand.h  databaserollbackcommand.cpp  databaserollbackcommand.h  feedsaddcommand.cpp  feedsaddcommand.h  feedscommand.cpp  feedscommand.h  feedslistcommand.cpp  feedslistcommand.h  feedslistitemscommand.cpp  feedslistitemscommand.h  feedsupdatecommand.cpp  feedsupdatecommand.h  placesaddcommand.cpp  placesaddcommand.h  placescommand.cpp  placescommand.h  placeslistcommand.cpp  placeslistcommand.h
cmd/commands/dbmigrations/: CMakeLists.txt  m0001_createplacestable.cpp  m0001_createplacestable.h  m0001_createuserstable.cpp  m0001_createuserstable.h  m0002_createfeedstable.cpp  m0002_createfeedstable.h  m0003_createitemstable.cpp  m0003_createitemstable.h
cmd/translations/: statalihcmd.de.ts  statalihcmd.ts
common/: confignames.h.in
